# commentor

./: .rusty-hook.toml  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
apps/commentor/: Cargo.toml  LICENCE.txt
apps/commentor/src/: github.rs  main.rs  parser.rs
xtask/: Cargo.toml
xtask/src/: main.rs
