[workspace]
resolver = "2"
members  = [
    "apps/*",
    "xtask",
]

[profile.release]
codegen-units = 1
lto           = true

[workspace.dependencies]

anyhow          = "1.0"
clap            = "4.5"
directories     = "6.0"
log             = "0.4"
logos           = "0.15"
reqwest         = "0.12"
serde           = "1"
serde_json      = "1"
simple_logger   = "5.0"
xshell          = "0.2"
