[package]
name = "commentor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow     		= { workspace = true }
clap 			= { workspace = true, features = ["derive"] }
directories     = { workspace = true }
log 			= { workspace = true }
logos           = { workspace = true }
reqwest 		= { workspace = true, features = ["blocking"] }
serde			= { workspace = true }
serde_json		= { workspace = true }
simple_logger 	= { workspace = true }
